Moving player analytics to repository api
